=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2016-03-07                                                    trunk-491
Fixed k-grid displacement reading

- There was no need for not reading 0 as a displacement
  in the kgrid_monkhorst_pack block.

  Previously siesta would error when:
   %block kgrid_monkhorst_pack
    1 0 0 0
    0 1 0 0
    0 0 1 0
   %endblock
  while now this will works

modified:
  Src/kgridinit.F
  Src/kpoint_grid.F90
  Src/kpoint_pdos.F90
  Src/m_ts_kpoints.F90
  Src/setup_kscell.F

-----------------------------------------------------------------------
2016-03-05                                                    trunk-490
Automatic reading of #atoms, and species without denoting count

- The NumberOfSpecies flag is now not needed any more.

  This reflects an easier usage as it first reads the lines
  in the ChemicalSpeciesLabel block and counts the number
  of species from this block.

  A small bug has also been fixed in that the first
  number is now correctly inserted in the slot
  that it intents.

  The NumberOfSpecies flag still has precedence in case
  you want a reduced number of elements.

  +manual

- The NumberOfAtoms is now not needed any more.

  Similar to the NumberOfSpecies flag we now count the
  number of atoms from the block by default.

  The NumberOfAtoms flag still has precedence in case
  you want a reduced number of atoms.

  +manual

- Output of chemical species is now more concise and aligned.
  This is just a visual change.

modified:
  Docs/siesta.tex
  Src/chemical.f
  Src/coor.F

-----------------------------------------------------------------------
2016-03-03                                                    trunk-489
[merge] Tests fix, REFERENCE_DIR and SIESTA
