@@ -196,6 +196,8 @@ contains
             ts_kscell(3,i) = fdf_bintegers(pline,3)
             if ( fdf_bnvalues(pline) > 3 ) then
               ts_kdispl(i) = fdf_bvalues(pline,4)
+            else
+              ts_kdispl(i) = 0._dp
             end if
           else
             call die( 'setup_ts_scf_kscell: ERROR no data in' // &
