@@ -64,6 +64,8 @@ C Internal variables
           kscell(3,i) = fdf_bintegers(pline,3)
           if ( fdf_bnvalues(pline) > 3 ) then
              displ(i) = fdf_bvalues(pline,4)
+          else
+             displ(i) = 0._dp
           end if
         enddo
         firm_displ = .true.
